# WolfAnime

./: .gitignore  README.md  build.gradle.kts  detekt-config.yml  docker-compose.yml  settings.gradle.kts  sonar-project.properties
back/: Dockerfile  build.gradle.kts
back/src/main/kotlin/fr/wolfdev/wolfanime/: Anilist.kt  Application.kt  CrunchyrollNative.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/config/: DatabaseFactory.kt  ModulesConfig.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/dao/: DAOFacade.kt  DAOFacadeImpl.kt  DAOToDTO.kt  DatabaseFactory.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/domain/: Crunchyroll.kt  Media.kt  MediaDAO.kt  MediaList.kt  MediaListDAO.kt  MediaTitle.kt  Series.kt  User.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/domain/repository/: CrunchyrollRepository.kt  MediaListRepository.kt  MediaRepository.kt  MediaTitleRepository.kt  UserRepository.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/domain/service/: CrunchyrollService.kt  MediaListService.kt  MediaService.kt  MediaTitleService.kt  UserService.kt
back/src/main/kotlin/fr/wolfdev/wolfanime/utils/: AnilistType.kt  Constants.kt
back/src/main/resources/: application.conf  graphql.config.yml  logback.xml
back/src/main/resources/queries/: AnimeListGetByUserId.graphql  UserIdGetByName.graphql
back/src/main/rust/: Cargo.toml  build.rs
back/src/main/rust/src/: lib.rs
back/src/test/kotlin/fr/wolfdev/wolfanime/: ApplicationTest.kt
back/src/test/resources/: application.conf
gradle/: libs.versions.toml  sonar.gradle
