[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_lib"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
jni = "0.21.1"
crunchyroll-rs = "0.8.2"
tokio = { version = "1.35.1", features = ["full"] }
serde_json = "1.0.113"

#[build-dependencies]
#cbindgen = "0.26.0"
